@@ -39,6 +39,7 @@
 #include <atalk/compat.h>
 #include <atalk/errchk.h>
 #include <atalk/volume.h>
+#include <atalk/dsi.h>
 
 #include "ad_lock.h"
 
@@ -154,7 +155,10 @@ static int ad_conv_v22ea_rf(const char *path, const struct stat *sp, const struc
         /* Create a adouble:ea resource fork */
         EC_ZERO_LOG( ad_open(&adea, path, ADFLAGS_RF|ADFLAGS_RDWR|ADFLAGS_CREATE|ADFLAGS_SETSHRMD, 0666) );
 
-        EC_ZERO_LOG( copy_fork(ADEID_RFORK, &adea, &adv2) );
+        EC_ZERO_LOG( copy_fork(ADEID_RFORK, &adea, &adv2,
+			       vol->v_obj->dsi->commands,
+			       vol->v_obj->dsi->server_quantum) );
+
         adea.ad_rlen = adv2.ad_rlen;
         ad_flush(&adea);
         fchmod(ad_reso_fileno(&adea), sp->st_mode & 0666);
